gateway-api-demo-app-http-route.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  labels:
    gateway: external-http
  name: k8s-gateway-api-demo
spec:
  gateways:
    allow: All
  rules:
  - forwardTo:
    - port: 8080
      serviceName: k8s-gateway-api-demo-service-
      weight: 50
    - port: 8080
      serviceName: k8s-gateway-api-demo-service-f3676ab
      weight: 50
    matches:
    - path:
        type: Prefix
        value: /
